[tool.pdm]

[project]
name = "infrabot"
version = "0.0.1"
description = ""
authors = [
    {name = "hama-jsoh", email = "juseok@hamagroups.io"},
]
dependencies = []
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"
